Separation of HTML and CSS, correction css, file name (error by 000webhost)

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Akronim|Black+Ops+One|Cinzel+Decorative:400,700,900|Federant|Flamenco:300,400|Gugi|Kaushan+Script|Lemonada:300,400,500,600,700|Monoton|Oxanium:200,300,400,500,600,700,800|Sirin+Stencil&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="fontello/css/fontello.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style-site.css">
 </head>
 <body>
 
