link: PHP / edycja pliku

--- a/index.htm
+++ b/index.htm
@@ -201,7 +201,7 @@ Nowy Sącz ul. Barbackiego 91">
 						<ul>
 							<h1>Różne projekty</h1>
 						
-							<a href="PHP/edycjapliku/" target="_blank"><li><span class="li">PHP / edycja pliku</span></li></a>
+							<a href="PHP/edycjapliku/tekst.php" target="_blank"><li><span class="li">PHP / edycja pliku</span></li></a>
 						</ul>
 					</li>
 				</ul>
