corrections after testing the site at https://webspeed.intensys.pl/

--- a/index.htm
+++ b/index.htm
@@ -136,7 +136,7 @@ Nowy Sącz ul. Barbackiego 91">
 		<article id="a1">
 			<ul>
 				<li id="li1" class="li2">
-					<div id="welcome"><h1>Witaj w przyszłości...</div></h1>
+					<div id="welcome"><h1>Witaj w przyszłości...</h1></div>
 				</li>
 				<li id="li2" class="li2">
 					<ul>
