Add <meta> Tag - description, keywords, author

--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,12 @@
 </script>
 
 	<meta charset="utf-8">
-	<title>Cezario Site - Portfolio</title>
+	<meta name="description" content="Cezario Site - Portfolio. Znajdziesz tu strony internetowe i projekty stworzone przez: cezario (created by cezario)">
+	<meta name="keywords" content="cezario, c3zario, cezario tk, cezario portfolio, cezario site, nowy sącz, elektryk, zsem, sp7, siodemka, przewodniczący">
+	<meta name="author" content="cezario">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<title>Cezario Site - Portfolio</title>
 	
 	<link href="https://fonts.googleapis.com/css?family=Akronim|Black+Ops+One|Cinzel+Decorative:400,700,900|Federant|Flamenco:300,400|Gugi|Kaushan+Script|Lemonada:300,400,500,600,700|Monoton|Oxanium:200,300,400,500,600,700,800|Sirin+Stencil&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="fontello/css/fontello.css">
@@ -136,7 +140,7 @@ Nowy Sącz ul. Barbackiego 91">
 		<article id="a1">
 			<ul>
 				<li id="li1" class="li2">
-					<div id="welcome"><h1>Witaj w przyszłości...</h1></div>
+					<div id="welcome"><h1>Witaj w przyszłości...</div></h1>
 				</li>
 				<li id="li2" class="li2">
 					<ul>
