Logo and <alt> Tags

--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
 	
 	<title>Cezario Site - Portfolio</title>
 	
+	<link rel="icon" href="img/cezario.png">
 	<link href="https://fonts.googleapis.com/css?family=Akronim|Black+Ops+One|Cinzel+Decorative:400,700,900|Federant|Flamenco:300,400|Gugi|Kaushan+Script|Lemonada:300,400,500,600,700|Monoton|Oxanium:200,300,400,500,600,700,800|Sirin+Stencil&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="fontello/css/fontello.css">
 	<link rel="stylesheet" type="text/css" href="style-site.css">
@@ -148,18 +149,18 @@ Nowy Sącz ul. Barbackiego 91">
 							<h1>W czym mogę ci pomóc</h1>
 						</li>
 						<div class="skills">	
-							<img src="img/html5.png">
-							<img src="img/css3.png">
-							<img src="img/JavaScript.png">
-							<img src="img/php7.png">
-							<img src="img/sql.png">
+							<img src="img/html5.png" alt="html5">
+							<img src="img/css3.png" alt="ccs3">
+							<img src="img/JavaScript.png" alt="Java Script">
+							<img src="img/php7.png" alt="php7">
+							<img src="img/sql.png" alt="sql">
 						</div>
 						<div class="skills">
-							<img src="img/naprawa.png" title="montaż i naprawa komputerów">
-							<img src="img/wifi.png" title="instalacja i konfiguracja sieci">
-							<img src="img/windows.jpg">
-							<img src="img/android.png">
-							<img src="img/baltie.png">
+							<img src="img/naprawa.png" alt="naprawa" title="montaż i naprawa komputerów">
+							<img src="img/wifi.png" alt="wifi" title="instalacja i konfiguracja sieci">
+							<img src="img/windows.jpg" alt="windows 10">
+							<img src="img/android.png" alt="android">
+							<img src="img/baltie.png" alt="baltie3">
 						</div>
 					</ul>
 				</li>
