Logo on the site (linking)

--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,19 @@
 
 <div id="img"></div>
 	
-	<header><div class="menu" id="butmenu" onclick="block()"><h1><i class="icon-menu"></i></h1></div><cezario style="display:inline"><sub style="font-size: 80%;">©</sub><span style="font-size: 65%;"> 2020</span> cezario</cezario></header>
+	<header><div class="menu" id="butmenu" onclick="block()"><h1><i class="icon-menu"></i></h1></div><cezario style="display:inline">
+		<div class="profilcaly" style="float: left;">
+			<div class="profilcaly2">
+				<div class="nazwacenter">
+					<sub style="font-size: 120%;">©</sub>&nbsp;2020 CEZARIO
+				</div>
+			
+				<div class="nazwacenter2">
+					<div id="cezario" class="logo profil"></div>
+				</div>
+			</div>
+		</div>
+	</cezario></header>
 	
 	<nav id="menu" class="noneblock">
 	<div class="close" onclick="noneblock()"></div>
