--- a/index.htm
+++ b/index.htm
@@ -161,7 +161,7 @@ Nowy Sącz ul. Barbackiego 91">
 							<h1>W czym mogę ci pomóc</h1>
 						</li>
 						<div class="skills">	
-							<img src="img/html5.png" alt="html5">
+							<img src="img/cezario.png" alt="html5">
 							<img src="img/css3.png" alt="ccs3">
 							<img src="img/JavaScript.png" alt="Java Script">
 							<img src="img/php7.png" alt="php7">
