--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,8 @@
 </head>
 <body>
 
-<div id="img"></div>
+	<img src="img/city.jpg" id="img2">
+	<div id="img"></div>
 	
 	<header><div class="menu" id="butmenu" onclick="block()"><h1><i class="icon-menu"></i></h1></div><cezario style="display:inline">
 		<div class="profilcaly" style="float: left;">
