--- a/index.htm
+++ b/index.htm
@@ -29,19 +29,7 @@
 	<img src="img/city.jpg" id="img2">
 	<div id="img"></div>
 	
-	<header><div class="menu" id="butmenu" onclick="block()"><h1><i class="icon-menu"></i></h1></div><cezario style="display:inline">
-		<div class="profilcaly" style="float: left;">
-			<div class="profilcaly2">
-				<div class="nazwacenter">
-					<sub style="font-size: 120%;">©</sub>&nbsp;2020 CEZARIO
-				</div>
-			
-				<div class="nazwacenter2">
-					<div id="cezario" class="logo profil"></div>
-				</div>
-			</div>
-		</div>
-	</cezario></header>
+	<header><div class="menu" id="butmenu" onclick="block()"><h1><i class="icon-menu"></i></h1></div><cezario style="display:inline"><sub style="font-size: 80%;">©</sub><span style="font-size: 65%;"> 2020</span> cezario</cezario></header>
 	
 	<nav id="menu" class="noneblock">
 	<div class="close" onclick="noneblock()"></div>
@@ -162,7 +150,7 @@ Nowy Sącz ul. Barbackiego 91">
 							<h1>W czym mogę ci pomóc</h1>
 						</li>
 						<div class="skills">	
-							<img src="img/cezario.png" alt="html5">
+							<img src="img/html5.png" alt="html5">
 							<img src="img/css3.png" alt="ccs3">
 							<img src="img/JavaScript.png" alt="Java Script">
 							<img src="img/php7.png" alt="php7">
