edit ::selection, add PHP/cookies

--- a/index.htm
+++ b/index.htm
@@ -197,14 +197,15 @@ Nowy Sącz ul. Barbackiego 91">
 							<a href="https://pizzatechnology.tk/" target="_blank"><li><span class="li">Pizza Technology</span></li></a>
 						</ul>
 					</li>
-					<!--<div style="clear: both;"></div>
+					<div style="clear: both;"></div>
 					<li id="li5" class="li2">
 						<ul>
 							<h1>Różne projekty</h1>
 						
-							<a href="PHP/edycjapliku/tekst.php" target="_blank"><li><span class="li">PHP / edycja pliku</span></li></a>
+							<!--<a href="PHP/edycjapliku/tekst.php" target="_blank"><li><span class="li">PHP / edycja pliku</span></li></a>-->
+							<a href="PHP/cookies.htm" target="_blank"><li><span class="li">PHP / cookies</span></li></a>
 						</ul>
-					</li>-->
+					</li>
 				</ul>
 		</article>
 	</main>
