--- a/index.htm
+++ b/index.htm
@@ -203,7 +203,7 @@ Nowy Sącz ul. Barbackiego 91">
 							<h1>Różne projekty</h1>
 						
 							<!--<a href="PHP/edycjapliku/tekst.php" target="_blank"><li><span class="li">PHP / edycja pliku</span></li></a>-->
-							<a href="php/cookies" target="_blank"><li><span class="li">PHP / cookies</span></li></a>
+							<a href="php/cookies"><li><span class="li">PHP / cookies</span></li></a>
 						</ul>
 					</li>
 				</ul>
