--- a/php/cookies.htm
+++ b/php/cookies.htm
@@ -1,3 +1,32 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160682698-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160682698-1');
+</script>
+
+	<meta charset="utf-8">
+	<meta name="description" content="Cezario Site - Portfolio. Znajdziesz tu strony internetowe i projekty stworzone przez: cezario (created by cezario)">
+	<meta name="keywords" content="cezario, c3zario, cezario tk, cezario portfolio, cezario site, nowy sącz, elektryk, zsem, sp7, siodemka, przewodniczący">
+	<meta name="author" content="cezario">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<title>Cezario Site - Portfolio</title>
+	
+	<link rel="icon" href="img/cezario.png">
+	<link href="https://fonts.googleapis.com/css?family=Akronim|Black+Ops+One|Cinzel+Decorative:400,700,900|Federant|Flamenco:300,400|Gugi|Kaushan+Script|Lemonada:300,400,500,600,700|Monoton|Oxanium:200,300,400,500,600,700,800|Sirin+Stencil&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="fontello/css/fontello.css">
+	<link rel="stylesheet" type="text/css" href="style-site.css">
+</head>
+
 <frameset>
     <frame src="https://cezariophp.tk/"></frame>
 </frameset>
+
+</html>
