--- a/php/cookies.htm
+++ b/php/cookies.htm
@@ -26,7 +26,7 @@
 </head>
 
 <frameset>
-    <frame src="https://cezariophp.tk/"></frame>
+    <frame src="https://cezariophp.tk/">
 </frameset>
 
 </html>
