--- a/php/cookies.htm
+++ b/php/cookies.htm
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="pl">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160682698-1"></script>
@@ -19,14 +17,21 @@
 	
 	<title>Cezario Site - Portfolio</title>
 	
-	<link rel="icon" href="img/cezario.png">
-	<link href="https://fonts.googleapis.com/css?family=Akronim|Black+Ops+One|Cinzel+Decorative:400,700,900|Federant|Flamenco:300,400|Gugi|Kaushan+Script|Lemonada:300,400,500,600,700|Monoton|Oxanium:200,300,400,500,600,700,800|Sirin+Stencil&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="fontello/css/fontello.css">
+	<link rel="icon" href="../img/cezario.png">
 	<link rel="stylesheet" type="text/css" href="style-site.css">
+	<style>
+		body
+		{
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+
+		iframe
+		{
+			border: none;
+		}
+	</style>
 </head>
 
-<frameset>
-    <frame src="https://cezariophp.tk/">
-</frameset>
-
-</html>
+    <iframe src="https://cezariophp.tk/" height="100%" width="100%"></iframe>
