--- a/svg/domek.htm
+++ b/svg/domek.htm
@@ -100,14 +100,14 @@
 		}
 	}
 </style>
-<svg width="auto" height="auto">
-	<rect class="a" x="800" y="500" width="240" height="220"/>
-	<rect class="b" id="drzwi" x="920" y="620" width="60" height="100"/>
-	<rect class="c" id="okno" x="830" y="590" width="55" height="55"/>
-	<path class="d" d="M1020,500 v-81,0 h-60,0"></path>
-	<polygon class="e" points="785,500 920,385 1055,500"></polygon>
-	<circle class="f" cx="990" cy="389" r="13.5"></circle>
-	<circle class="g" cx="1025" cy="360" r="20"></circle>
+<svg width="100%" height="100%">
+	<rect class="a" x="400" y="900" width="240" height="220"/>
+	<rect class="b" id="drzwi" x="520" y="1020" width="60" height="100"/>
+	<rect class="c" id="okno" x="430" y="990" width="55" height="55"/>
+	<path class="d" d="M620,900 v-81,0 h-60,0"></path>
+	<polygon class="e" points="385,900 520,785 655,900"></polygon>
+	<circle class="f" cx="590" cy="789" r="13.5"></circle>
+	<circle class="g" cx="625" cy="760" r="20"></circle>
 	
 </svg>
 
