Google AdSense script

--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Akronim|Black+Ops+One|Cinzel+Decorative:400,700,900|Federant|Flamenco:300,400|Gugi|Kaushan+Script|Lemonada:300,400,500,600,700|Monoton|Oxanium:200,300,400,500,600,700,800|Sirin+Stencil&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="fontello/css/fontello.css">
 	<link rel="stylesheet" type="text/css" href="style-site.css">
+	<script data-ad-client="ca-pub-3796447408159832" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 
@@ -173,6 +174,7 @@ Nowy Sącz ul. Barbackiego 91">
 								<i class="icon-mail"></i><br>
 								cezario@int.pl
 							</div>
+						<!--	<iframe src="https://cezariophp.tk/mail-cezario/mail.php" height="80%" width="80%"></iframe>-->
 							<a href="https://github.com/c3zario" target="_blank"><div class="mail">
 								<i class="icon-github"></i><br>
 								Github <span id="c3zarioall">c<span id="c3zario3">3</span>zario</span>
