--- a/svg/domek.htm
+++ b/svg/domek.htm
@@ -43,11 +43,6 @@
 		fill: none;
 	}
 	
-	#a
-	{
-		width="240"; height="220";
-	}
-	
 	@keyframes dom
 	{
 		to
@@ -124,18 +119,18 @@
 	{
 		to
 		{
-			transform: rotate(-30deg);
+			transform: rotate(-45deg);
 		}
 	}
 </style>
 <svg width="100%" height="100%">
-	<rect class="a" x="800" y="500" width="240" height="220"/>
-	<rect class="b" id="drzwi" x="920" y="620" width="60" height="100"/>
-	<rect class="c" id="okno" x="830" y="590" width="55" height="55"/>
-	<path class="d" d="M1020,500 v-81,0 h-60,0"></path>
-	<polygon class="e" points="785,500 920,385 1055,500"></polygon>
-	<circle class="f" cx="990" cy="389" r="13.15">
-	</circle><circle class="g" cx="1025" cy="360" r="20"></circle>
+	<rect class="a" x="400" y="600" width="240" height="220"/>
+	<rect class="b" id="drzwi" x="520" y="720" width="60" height="100"/>
+	<rect class="c" id="okno" x="430" y="690" width="55" height="55"/>
+	<path class="d" d="M620,600 v-81,0 h-60,0"></path>
+	<polygon class="e" points="385,600 520,485 655,600"></polygon>
+	<circle class="f" cx="590" cy="489" r="13.5"></circle>
+	<circle class="g" cx="625" cy="460" r="20"></circle>
 	
 </svg>
 <script>
@@ -149,9 +144,9 @@
 		
 		var dymm = document.createElementNS("http://www.w3.org/2000/svg", 'circle');
 		dymm.setAttribute("class", "f rot2");
-		dymm.setAttribute("cx", 990);
-		dymm.setAttribute("cy", 389);
-		dymm.setAttribute("r", 13.15);
+		dymm.setAttribute("cx", 590);
+		dymm.setAttribute("cy", 489);
+		dymm.setAttribute("r", 13.5);
 		
 		
 		document.getElementsByTagName("svg")[0].appendChild(dymm);
@@ -167,8 +162,8 @@
 		
 		var dymd = document.createElementNS("http://www.w3.org/2000/svg", 'circle');
 		dymd.setAttribute("class", "g rot");
-		dymd.setAttribute("cx", 1025);
-		dymd.setAttribute("cy", 360);
+		dymd.setAttribute("cx", 625);
+		dymd.setAttribute("cy", 460);
 		dymd.setAttribute("r", 20);
 		
 		
