--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
 		<li>
 			<h1 id="h1">Współpraca</h1>
 			<ul class="noneblock">
-				<a href="https://www.pizzeriagondola.pl/" target="_blank" title="Pizzeria Tradycyjna GONDOLA
+				<a href="https://egondola.pl/" target="_blank" title="Pizzeria Tradycyjna GONDOLA
 Nowy Sącz ul. Barbackiego 91">
 		<li>
 			<div class="profilcaly">
@@ -172,7 +172,7 @@ Nowy Sącz ul. Barbackiego 91">
 						<div id="mail">
 							<div class="mail">
 								<i class="icon-mail"></i><br>
-								cezario@int.pl
+								<a href="mailto:cezario@int.pl">cezario@int.pl</a>
 							</div>
 						<!--	<iframe src="https://cezariophp.tk/mail-cezario/mail.php" height="80%" width="80%"></iframe>-->
 							<a href="https://github.com/c3zario" target="_blank"><div class="mail">
@@ -196,7 +196,9 @@ Nowy Sącz ul. Barbackiego 91">
 						<ul>
 							<h1>Projekty stron</h1>
 						
-							<a href="https://pizzatechnology.tk/" target="_blank"><li><span class="li">Pizza Technology</span></li></a>
+							<!--<a href="https://pizzatechnology.tk/" target="_blank"><li><span class="li">Pizza Technology</span></li></a>-->
+
+							<a href="https://egondola.pl/" target="_blank"><li><span class="li">eGondola.pl</span></li></a>
 						</ul>
 					</li>
 					<div style="clear: both;"></div>
@@ -206,6 +208,8 @@ Nowy Sącz ul. Barbackiego 91">
 						
 							<!--<a href="PHP/edycjapliku/tekst.php" target="_blank"><li><span class="li">PHP / edycja pliku</span></li></a>-->
 							<a href="php/cookies"><li><span class="li">PHP / cookies</span></li></a>
+
+							<a href="https://server470011.nazwa.pl/cezario/"><li><span class="li">PHP / rejestracja</span></li></a>
 						</ul>
 					</li>
 				</ul>
