--- a/php/cookies.htm
+++ b/php/cookies.htm
@@ -34,4 +34,4 @@
 	</style>
 </head>
 
-    <iframe src="https://cezariophp.tk/" height="100%" width="100%"></iframe>
+    <iframe src="https://server470011.nazwa.pl/cezario/cookies/" height="100%" width="100%"></iframe>
