--- a/index.htm
+++ b/index.htm
@@ -209,7 +209,7 @@ Nowy Sącz ul. Barbackiego 91">
 							<!--<a href="PHP/edycjapliku/tekst.php" target="_blank"><li><span class="li">PHP / edycja pliku</span></li></a>-->
 							<a href="php/cookies"><li><span class="li">PHP / cookies</span></li></a>
 
-							<a href="https://server470011.nazwa.pl/cezario/"><li><span class="li">PHP / rejestracja</span></li></a>
+							<a href="php/czas"><li><span class="li">PHP / rejestracja</span></li></a>
 						</ul>
 					</li>
 				</ul>
