--- a/php/czas.htm
+++ b/php/czas.htm
@@ -33,4 +33,4 @@
         </style>
     </head>
     
-        <iframe src="http://server470011.nazwa.pl/cezario/" height="100%" width="100%"></iframe>
+        <iframe src="https://server470011.nazwa.pl/cezario/" height="100%" width="100%"></iframe>
