--- a/index.htm
+++ b/index.htm
@@ -210,6 +210,8 @@ Nowy Sącz ul. Barbackiego 91">
 							<a href="php/cookies" target="_blank"><li><span class="li">PHP / cookies</span></li></a>
 
 							<a href="php/czas" target="_blank"><li><span class="li">PHP / rejestracja</span></li></a>
+
+							<a href="php/baza-danych" target="_blank"><li><span class="li">PHP / baza danych</span></li></a>
 						</ul>
 					</li>
 				</ul>
