--- a/ang/u4.htm
+++ b/ang/u4.htm
@@ -115,7 +115,59 @@ ang = [
 'three-course meal',
 'vegan',
 'vegetarian diet',
-'warm'
+'warm',
+'agricultural sector',
+'alarming/official statistics',
+'assist',
+'catering/tourist industry',
+'chef',
+'curry',
+'discarded',
+'due date',
+'energy consumption',
+'expiry date',
+'financial/voluntary sector',
+'food/household waste',
+'frying pan',
+'global statistics',
+'government/international standards',
+'healthy lifestyle',
+'human consumption',
+'incentive',
+'industrial waste',
+'leftovers',
+'local level',
+'manufacturing industry',
+'meat consumption',
+'minimum/record level',
+'mixture',
+'nutritious',
+'oven',
+'pan',
+'recipe',
+'safety standards',
+'sell-by date',
+'serve',
+'spoon',
+'throw away',
+'waste',
+'apple pie',
+'chicken',
+'pasta sauce',
+'peel',
+'vegetable soup',
+'dietary needs',
+'cookery course/lessons',
+'cuisine',
+'be allergic to',
+'bill',
+'cheeseburger',
+'chips',
+'chocolate mousse',
+'fruit salad',
+'green beans',
+'prawn sauce',
+'red pepper'
 ];
 
 pol = [
@@ -231,7 +283,59 @@ pol = [
 'trzydniowy posiłek',
 'weganin',
 'dieta wegetariańska',
-'ciepły'
+'ciepły',
+'sektor rolny',
+'alarmujące/oficjalne dane statystyczne',
+'pomagać',
+'branża cateringowa/turystyczna',
+'wykwalifikowany kucharz',
+'curry',
+'wyrzucone',
+'termin wykonania, termin płatności',
+'zużycie energii',
+'termin ważności',
+'sektor finansowy/wolontariatu',
+'odpady żywnościowe/z gospodarstw domowych',
+'patelnia',
+'światowe statystyki',
+'normy państwowe/międzynarodowe',
+'zdrowy trub życia',
+'spożycie przez ludzi',
+'zachęta',
+'odpady przemysłowe',
+'resztki',
+'poziom lokalny',
+'przemysł wytwórczy',
+'spożycie mięsa',
+'minimalny/rekordowy poziom',
+'mieszanka',
+'pożywny, odżywczy',
+'piekarnik',
+'garnek',
+'przepis',
+'normy bezpieczeństwa',
+'zalecana data sprzedaży',
+'podać',
+'łyżka',
+'wyrzucić',
+'odpady; marnować',
+'szarlotka',
+'kurczak',
+'sos do makaronu',
+'obrać',
+'zupa jarzynowa',
+'potrzeby żywieniowe',
+'kurs/lekcje gotowania',
+'sposób gotowania',
+'mieć alergię na',
+'rachunek',
+'cheeseburger',
+'frytki',
+'mus czekoladowy',
+'sałatka owocowa',
+'zielona fasolka szparagowa',
+'sos krewetkowy',
+'czerwona papryka'
 ];
 
 var html = '\
