--- a/php/baza-danych.htm
+++ b/php/baza-danych.htm
@@ -33,4 +33,4 @@
         </style>
     </head>
     
-        <iframe src="https://server470011.nazwa.pl/cezario/pma/" height="100%" width="100%"></iframe>
+        <iframe src="https://http://server470011.nazwa.pl/cezario/pma/baza.php" height="100%" width="100%"></iframe>
