--- a/ang/u5.htm
+++ b/ang/u5.htm
@@ -62,7 +62,66 @@ ang = [
 'predict',
 'production',
 'provide',
-'vertical'
+'vertical',
+'affect',
+'air quality',
+'bicycle rack',
+'climate',
+'climate change',
+'electricity',
+'environment',
+'environmental issues',
+'gadget',
+'global warming',
+'in the school grounds',
+'low-energy light bulb',
+'organic',
+'recycle',
+'recycling bin',
+'renewable energy',
+'save electricity',
+'solar panels',
+'backpack',
+'bear',
+'bear encounter',
+'bee',
+'branch',
+'clearing',
+'come face to face with',
+'cub',
+'defend',
+'die from',
+'flashlight',
+'fox',
+'go off',
+'gorge yourself',
+'hedgehog',
+'in the bushes',
+'insect repellent',
+'leaf / leaves',
+'nail clippers',
+'pancake',
+'path',
+'pepper spray',
+'pitch black',
+'pond',
+'predator',
+'prey',
+'reach for',
+'root',
+'search through',
+'sharp knife',
+'sit around',
+'skunk',
+'sleep through',
+'sleeping bag',
+'snore',
+'spring',
+'squirrel',
+'store food',
+'sunscreen',
+'trail',
+'trunk'
 ];
 
 pol = [
@@ -125,7 +184,66 @@ pol = [
 'przepowiadać, przewidywać',
 'produkcja',
 'dostarczać',
-'pionowy'
+'pionowy',
+'dotyczyć, dotykać',
+'jakość powietrza',
+'stojak na rowery',
+'klimat',
+'zmiana klimatu',
+'elektryczność',
+'środowisko naturalne',
+'zagadnienia związane ze środowiskiem',
+'gadżet',
+'globalne ocieplenie',
+'na terenie szkoły',
+'żarówka energooszczędna',
+'ekologiczny',
+'przetwarzać, ponownie wykorzystywać',
+'pojemnik segregacji odpadów',
+'energia odnawialna',
+'oszczędzać energię elektryczną',
+'panele słoneczne',
+'plecak',
+'niedźwiedź',
+'spotkanie z niedźwiedziem',
+'pszczoła',
+'gałąź',
+'polana',
+'stanąć twarzą w twarz',
+'młode (np. niedźwiedzia)',
+'bronić się',
+'umrzeć z powodu',
+'latarka',
+'lis',
+'zepsuć się (o jedzeniu)',
+'objadać się',
+'jeż',
+'w krzakach',
+'środek przeciw owadom',
+'liście',
+'obcinacz do paznokci',
+'naleśnik',
+'ścieżka',
+'gaz pieprzowy',
+'zupełnie ciemno',
+'staw',
+'drapieżnik',
+'ofiara',
+'sięgać po',
+'korzeń',
+'przetrząsać',
+'ostry nóż',
+'siedzieć bezczynnie',
+'skunks',
+'przespać coś',
+'śpiwór',
+'chrapać',
+'źródło',
+'wiewiórka',
+'przechowywać jedzenie',
+'przeciwsłoneczny',
+'szlak',
+'pień'
 ];
 
 var html = '\
