--- a/ang/u5.htm
+++ b/ang/u5.htm
@@ -121,7 +121,13 @@ ang = [
 'store food',
 'sunscreen',
 'trail',
-'trunk'
+'trunk',
+'bite',
+'cage',
+'coast',
+'dolphin',
+'female elephant/gorilla/bear',
+'herd'
 ];
 
 pol = [
@@ -243,7 +249,13 @@ pol = [
 'przechowywać jedzenie',
 'przeciwsłoneczny',
 'szlak',
-'pień'
+'pień',
+'ugryźć',
+'klatka',
+'wybrzeże',
+'delfin',
+'niedźwiedzica',
+'stado'
 ];
 
 var html = '\
