--- a/svg/imie.htm
+++ b/svg/imie.htm
@@ -4,7 +4,7 @@
         stroke-linejoin: round;
     }
 </style>
-<svg id="svgsvgDiv" width="1360" height="700" style="border:1px solid #d3d3d3;">
+<svg id="svgsvgDiv" width="430" height="100">
     <polyline id="c" points="10,90 50,90 60,90 70,90" style="fill:none;stroke:#d61515c7;stroke-width:6"/>
 
     <polyline id="e" points="80,90 90,90 95,90 120,90 95,90 130,90 140,90" style="fill:none;stroke:#73138ecc;stroke-width:6"/>
