--- a/svg/imie.htm
+++ b/svg/imie.htm
@@ -1,21 +1,23 @@
 <style>
     polyline {
+        fill: none;
+        stroke-width: 6;
         stroke-linecap: round;
         stroke-linejoin: round;
     }
 </style>
-<svg id="svgsvgDiv" width="430" height="100">
-    <polyline id="c" points="10,90 50,90 60,90 70,90" style="fill:none;stroke:#d61515c7;stroke-width:6"/>
+<svg width="430" height="100">
+    <polyline id="c" points="10,90 50,90 60,90 70,90" style="stroke:#d61515c7"/>
 
-    <polyline id="e" points="80,90 90,90 95,90 120,90 95,90 130,90 140,90" style="fill:none;stroke:#73138ecc;stroke-width:6"/>
+    <polyline id="e" points="80,90 90,90 95,90 120,90 95,90 130,90 140,90" style="stroke:#73138ecc"/>
 
-    <polyline id="z" points="150,90 190,90 200,90 210,90" style="fill:none;stroke:#b5a616;stroke-width:6"/>
+    <polyline id="z" points="150,90 190,90 200,90 210,90" style="stroke:#b5a616"/>
 
-    <polyline id="a" points="220,90 260,90 270,90 275,90 270,90 280,90" style="fill:none;stroke:#1d89a7;stroke-width:6"/>
+    <polyline id="a" points="220,90 260,90 270,90 275,90 270,90 280,90" style="stroke:#1d89a7"/>
 
-    <polyline id="r" points="290,90 295,90 300,90 310,90 330,90 340,90 350,90" style="fill:none;stroke:#b16a18e3;stroke-width:6"/>
+    <polyline id="r" points="290,90 295,90 300,90 310,90 330,90 340,90 350,90" style="stroke:#b16a18e3"/>
 
-    <polyline id="y" points="360,90 400,90 410,90 400,90 420,90" style="fill:none;stroke:#79d221d4;stroke-width:6"/>
+    <polyline id="y" points="360,90 400,90 410,90 400,90 420,90" style="stroke:#79d221d4"/>
 
 
     <animate id="a1"
